--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,88 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add product</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-
-    main {
-      padding: 1rem;
-    }
-
-    .main-header {
-      width: 100%;
-      height: 3.5rem;
-      background-color: beige;
-      padding: 0 1.5rem;
-    }
-
-    .main-header__nav {
-      height: 100%;
-      display: flex;
-      align-items: center;
-
-    }
-
-    .main-header__item-list {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-
-    .main-header__item {
-      margin: 0 1.5rem;
-      padding: 0;
-    }
-
-    .main-header__item a {
-      text-decoration: none;
-      color: #333333;
-    }
-
-    .main-header__item a:hover,
-    .main-header__item a:active,
-    .main-header__item a.active {
-      text-decoration: none;
-      color: #663cff;
-    }
-
-    .form-control label,
-    .form-control input{
-      display: block;
-      margin-bottom: 8px;
-    }
-
-    .form-control input{
-      border: 2px solid #333333;
-      padding: 8px;
-      width: 33%;
-      font: inherit;
-      border-radius: 8px;
-    }
-
-    .form-control input:focus{
-      border-color: #663cff;
-      outline: none;
-      background-color: #e6e0fd;
-    }
-
-    button{
-      background-color: #663cff;
-      cursor: pointer;
-      padding: 8px 12px;
-      color: white;
-      font-size: 16px;
-      border-radius: 8px;
-    }
-
-    button:hover{
-      background-color: #472aaf;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
