--- a/views/shop.html
+++ b/views/shop.html
@@ -5,56 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop</title>
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-
-    main {
-      padding: 1rem;
-    }
-
-    .main-header {
-      width: 100%;
-      height: 3.5rem;
-      background-color: beige;
-      padding: 0 1.5rem;
-    }
-
-    .main-header__nav {
-      height: 100%;
-      display: flex;
-      align-items: center;
-
-    }
-
-    .main-header__item-list {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-
-    .main-header__item {
-      margin: 0 1.5rem;
-      padding: 0;
-    }
-
-    .main-header__item a {
-      text-decoration: none;
-      color: #333333;
-    }
-
-    .main-header__item a:hover,
-    .main-header__item a:active,
-    .main-header__item a.active {
-      text-decoration: none;
-      color: #663cff;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
