--- a/views/shop.pug
+++ b/views/shop.pug
@@ -3,7 +3,8 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title My shop
+    //- value passed form shop.js
+    title #{docTitle}
     link(rel="stylesheet", href="/css/main.css")
   body
     header.main-header
@@ -12,4 +13,23 @@ html(lang="en")
           li.main-header__item
             a.active(href="/") Shop
           li.main-header__item
-            a(href="admin/add-product") Add product  
+            a(href="admin/add-product") Add product 
+    
+    main
+      if prods.length > 0
+        .grid
+        each product in prods
+          article.card.product-item 
+            header.card__header 
+              h1.product__title #{product.title}
+            .card__image
+              img(src="", alt="a book")
+            .card__content 
+              h2.product__price 19.99€
+              p.product__description A very interesting book 
+            .card__actions
+              button.btn Add to cart 
+      else
+        h1 No products
+
+          
