--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -17,7 +17,7 @@
         <label for="title">Product Name</label>
         <input type="text" name="title" id="title">
       </div>
-      <button type="submit">Add product</button>
+      <button type="submit" class="primary-btn">Add product</button>
     </form>
   </main>
 </body>
