--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <%- include('shared/head.ejs') %>
+    <link rel="stylesheet" href="/css/card.css">
 </head>
 
 <body>
@@ -12,29 +13,31 @@
 
   <main>
     <h1>My products</h1>
-    <% if(prods.length > 0) { %>
-      <% for(let product of prods) { %>
-        <div class="grid">
-          <article class="card product-item">
+    <% if(prods.length> 0) { %>
+      <div class="grid">
+        <% for(let product of prods) { %>
+          <article class="card">
             <header class="card__header">
-              <h1 class="product__title"><%= product.title %></h1>
+              <h1 class="product__title">
+                <%= product.title %>
+              </h1>
               <div class="card__image">
                 <img src="" alt="">
               </div>
               <div class="card__content">
-                <h2 class="product__price">19.99€</h2>
+                <h3 class="product__price">19.99€</h3>
                 <p class="product__description">A very interesting book</p>
               </div>
               <div class="card__actions">
-                <button class="btn">Add to cart</button>
+                <button class="secondary-btn card-btn">Add to cart</button>
               </div>
             </header>
           </article>
-        </div>
-      <% } %>
-    <% } else { %>
-      <h2>No products found</h2>
-    <% } %>
+          <% } %>
+      </div>
+      <% } else { %>
+        <h2>No products found</h2>
+        <% } %>
   </main>
 </body>
 
