--- a/views/shared/nav.ejs
+++ b/views/shared/nav.ejs
@@ -4,7 +4,16 @@
       <a href="/" class="<%= path === '/' ? 'active' : '' %>">Shop</a>
     </li>
     <li class="main-header__item">
+      <a href="/products" class="<%= path === '/products' ? 'active' : '' %>">Products</a>
+    </li>
+    <li class="main-header__item">
+      <a href="/cart" class="<%= path === '/cart' ? 'active' : '' %>">Cart</a>
+    </li>
+    <li class="main-header__item">
       <a href="/admin/add-product" class="<%= path === '/add-product' ? 'active' : '' %>">Add product</a>
+    </li>
+    <li class="main-header__item">
+      <a href="/admin/products" class="<%= path === '/admin/add-product' ? 'active' : '' %>">Admin products</a>
     </li>
   </ul>
 </nav>
