--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <%- include('shared/head.ejs') %>
+  <%- include('../shared/head.ejs') %>
     <link rel="stylesheet" href="/css/card.css">
 </head>
 
 <body>
   <header class="main-header">
-    <%- include('shared/nav.ejs') %>
+    <%- include('../shared/nav.ejs') %>
   </header>
 
   <main>
