Values dynamically added from the form

--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -13,10 +13,27 @@
 
   <main>
     <form class="product-form" action="/admin/add-product" method="POST">
+
       <div class="form-control">
         <label for="title">Product Name</label>
         <input type="text" name="title" id="title">
       </div>
+
+      <div class="form-control">
+        <label for="imageUrl">Image url</label>
+        <input type="text" name="imageUrl" id="imageUrl">
+      </div>
+
+      <div class="form-control">
+        <label for="price">Price</label>
+        <input type="number" name="price" id="price" step="0.01">
+      </div>
+
+      <div class="form-control">
+        <label for="description">Product description</label>
+        <textarea name="description" id="description" rows="3"></textarea>
+      </div>
+
       <button type="submit" class="primary-btn">Add product</button>
     </form>
   </main>
