--- a/public/css/card.css
+++ b/public/css/card.css
@@ -4,45 +4,50 @@
   gap: 16px;
 }
 
-.card{
+.card {
   border: 2px solid #333333;
   padding: 0;
   border-radius: 16px;
   padding: 1rem;
 }
 
-.card__header{
+.card__header {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.product__title{
+.product__title {
   color: #333333;
   margin: 0;
 }
 
-.card__image{
+.card__image {
   min-width: 200px;
   background-color: lightsteelblue;
-  height: 160px;
+  max-height: 160px;
 }
 
-.card__content{
+.card__image img {
+  width: 100%;
+  height: auto;
+}
+
+.card__content {
   display: flex;
   flex-direction: column;
   gap: 0.5rem
 }
 
-.product__price{
+.product__price {
   color: #663cff;
   margin: 0;
 }
 
-.product__description{
+.product__description {
   margin: 0;
 }
 
-.card-btn{
+.card-btn {
   width: 100%;
 }
