--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -22,11 +22,11 @@
                 <%= product.title %>
               </h1>
               <div class="card__image">
-                <img src="" alt="">
+                <img src="<%= product.imageUrl %>" alt="<%= product.description %>">
               </div>
               <div class="card__content">
-                <h3 class="product__price">19.99€</h3>
-                <p class="product__description">A very interesting book</p>
+                <h3 class="product__price"><%= product.price %></h3>
+                <p class="product__description"><%= product.description %></p>
               </div>
               <div class="card__actions">
                 <button class="secondary-btn card-btn">Add to cart</button>
