--- a/views/shared/nav.ejs
+++ b/views/shared/nav.ejs
@@ -10,6 +10,9 @@
       <a href="/cart" class="<%= path === '/cart' ? 'active' : '' %>">Cart</a>
     </li>
     <li class="main-header__item">
+      <a href="/orders" class="<%= path === '/orders' ? 'active' : '' %>">Orders</a>
+    </li>
+    <li class="main-header__item">
       <a href="/admin/add-product" class="<%= path === '/add-product' ? 'active' : '' %>">Add product</a>
     </li>
     <li class="main-header__item">
