--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -13,5 +13,24 @@
 
   <main>
     <h2>Orders</h2>
+    <% if(orders.length > 0) { %>
+      <ul>
+        <% orders.forEach(order => { %>
+          <li>
+            <h1># <%= order.id %> </h1>
+            <ul>
+              <% order.products.forEach(product => { %>
+                <li>
+                  <p> <%= product.title %> </p>
+                  <p> <%= product.orderItem.quantity %> </p>
+                </li>
+              <% }) %>
+            </ul>
+          </li>
+        <% }) %>
+      </ul>
+    <% } else { %>
+      <h2>No orders yet</h2>
+    <% } %>
   </main>
 </body>
